Adjust the media query size from 768 to 780 to ensure enough space for a non-collapsed header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,8 +212,8 @@ footer {
 
 
 
-/* Media query: tablets from 768px */
-@media screen and (min-width: 768px) {
+/* Media query: tablets from 768px - changed to 770, since ipad mini has too less space for a not collapsed header..*/
+@media screen and (min-width: 770px) {
     nav {
         display: flex;
         position: relative;
